<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="LOGIN /Register"
            app:titleMargin="20dp"

            >


        </androidx.appcompat.widget.Toolbar>
     <ImageView
            android:id="@+id/iv_view2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/splash_screen" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/username"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/username"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/enter_email_address"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPincode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/editTextTextEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/enter_pincode"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/enter_pincode"
            android:inputType="number" />
       <EditText
        android:id="@+id/etmobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etPincode"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/enter_mobile_no"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_mobile_no"
        android:inputType="number" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etmobile"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/enter_password"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/enter_password"
            android:inputType="number" />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/confirm_password"
            android:background="@android:drawable/editbox_background"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/enter_password"
            android:inputType="number" />

        <Button
            android:id="@+id/Signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#0E0E0E"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"

            android:fontFamily="sans-serif-black"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="#0B0A0A" />

        <Button
            android:id="@+id/google"
            android:layout_width="79dp"
            android:layout_height="44dp"
            android:layout_below="@+id/button2"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/google"
            android:textAllCaps="false"
            android:textColor="#F6F2F2"
            app:backgroundTintMode="add" />


    </RelativeLayout>
</ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navhader"
        app:itemBackground="@color/design_default_color_on_primary"
        app:menu="@menu/menu1"


        />

</androidx.drawerlayout.widget.DrawerLayout>